--- a/projectIO/templates/base.html.twig
+++ b/projectIO/templates/base.html.twig
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
+
+        <style>
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            
         {% endblock %}
+        </style>
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}<p>ELO</p>{% endblock %}
     </body>
 </html>
