--- a/projectIO/templates/home_page/index.html.twig
+++ b/projectIO/templates/home_page/index.html.twig
@@ -1,20 +1,185 @@
 {% extends 'base.html.twig' %}
+{% block head %}
+<head>
 
-{% block title %}Hello HomePageController!{% endblock %}
+<title>{% block title %}Home Page{% endblock %}</title>
+
+    <style>
+	{% block stylesheets %}
+    #all{
+	width:100%;
+	height:100%
+}
+
+body{
+	background-image: url("./tlo.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+
+p{
+	margin-left:5%;
+}
+#grafikagorna{
+	height:15%;
+	position: absolute; top:0%;
+	position: fixed;
+	width: 79.3%;
+	text-align:center;
+	padding:0%;
+	margin-left:9.95%;
+	margin-right:10%;
+	border:solid;
+	border-color:black;
+	background-color: rgba(37, 50, 50, 0.8);
+}
+
+#grafikagorna h1{
+	margin-left: auto;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 9%;
+    position: fixed;
+    height: 14,2%;
+	background-color:rgba(37, 50, 50, 0.8);
+    overflow: auto;
+	margin-top: 9.9%;
+	border: solid;
+	border-color:black;
+	font-size:14px;
+}
+
+ul a {
+    display: block;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+ul a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+ul a:hover:not(.active) {
+    background-color: #4CAF50;
+    color: white;
+}
+
+#grafiki_obok_textu{
+	float:left;
+}
+
+#box{
+	float:left;
+	width: 80%;
+	height: 50%;
+	margin-left:10%;
+	margin-right:10%;
+	margin-top:10%;
+	background-color:rgba(37, 50, 50, 0.8);
+	border: solid;
+	border-color: black;
+	color: white;
+}
+
+#grafiki_obok_textu{
+	float:left;
+	width:20%;
+	height:20%;
+}
+
+#text h1{
+	margin-left:43%; 
+	margin-top:3%; 
+	max-width: 800px; 
+	width: 95%; 
+	font: 18px/1.5 sans-serif;
+}
+
+#text p{
+	margin-left:35%; 
+	margin-top:5%; 
+	font: 18px/1.5 sans-serif;
+}
+
+#grafiki_obok_textu2{
+	float:right;
+	width:20%;
+	height:20%;
+}
+
+#stopka{
+	float:left;
+	width: 80%;
+	background: black;
+	margin-left:10%;
+	margin-right:10%;
+	margin-top:10px;
+	padding: 0;
+	text-align:center;
+	border: solid;
+	border-color: black;
+	color:grey;
+}
+
+a{
+	color:green;
+	padding:1%;
+}
+
+{% endblock %} 
+    </style>
+</head>
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/rafalsipiatowski/Desktop/Studia/rok 2/semestr 2/io/IOProjekt/projectIO/src/Controller/HomePageController.php'|file_link(0) }}">src/Controller/HomePageController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/rafalsipiatowski/Desktop/Studia/rok 2/semestr 2/io/IOProjekt/projectIO/templates/home_page/index.html.twig'|file_link(0) }}">templates/home_page/index.html.twig</a></code></li>
-    </ul>
+<body>
+<div id="grafikagorna">
+<h1>
+BANER
+</h1>
 </div>
+
+<ul>
+	<li><a class="active" href="/home">Home</a></li>
+	<li><a href="/terminarz">Terminarz</a><li>
+	<li><a href="/cennik">Cennik</a></li>
+	<li><a href="/cennik">Kontakt</a></li>
+</ul>
+
+	<div id="box">
+	
+	<div id="grafiki_obok_textu">
+		<h1>GRAFIKI OBOK TEKSTU</h1>
+	</div>
+	
+	<div id="text">
+	
+	<h1>Witaj Administratorze Firmy! ✅</h1>
+	<p>Na tej stronie poznasz trzy ze swoich możliwości!<br>
+	1. Tworzenie i zarządzanie terminarzem.<br>
+	2. Tworzenie i zarządzanie cennikiem.<br>
+	3. Kontakt z naszą administracją.</p>
+	
+	</div> <!--zamkniecie diva text-->
+	
+	<div id="grafiki_obok_textu2">
+		<h1>GRAFIKI OBOK TEKSTU</h1>
+	</div>
+	
+	</div> <!--zamkniecie boxa-->
+	
+	
+	
+	<div id="stopka">
+		<p> Projekt Tomasz Turczewski i Rafal Sipiatowski</p>
+	</div>
+
+</body>
 {% endblock %}
