--- a/projectIO/templates/terminarz/index.html.twig
+++ b/projectIO/templates/terminarz/index.html.twig
@@ -1,10 +1,170 @@
 {% extends 'base.html.twig' %}
+{% block head %}
+<head>
 
-{% block title %}Terminarz index{% endblock %}
+<title>{% block title %}Terminarz{% endblock %}</title>
+
+    <style>
+	{% block stylesheets %}
+    #all{
+	width:100%;
+	height:100%
+}
+
+body{
+	background-image: url("./tlo.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+
+p{
+	margin-left:5%;
+}
+#grafikagorna{
+	height:15%;
+	position: absolute; top:0%;
+	position: fixed;
+	width: 79.3%;
+	text-align:center;
+	padding:0%;
+	margin-left:9.95%;
+	margin-right:10%;
+	border:solid;
+	border-color:black;
+	background-color: rgba(37, 50, 50, 0.8);
+}
+
+#grafikagorna h1{
+	margin-left: auto;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 9%;
+    position: fixed;
+    height: 14,2%;
+	background-color:rgba(37, 50, 50, 0.8);
+    overflow: auto;
+	margin-top: 9.9%;
+	border: solid;
+	border-color:black;
+	font-size:14px;
+}
+
+ul a {
+    display: block;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+ul a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+ul a:hover:not(.active) {
+    background-color: #4CAF50;
+    color: white;
+}
+
+#grafiki_obok_textu{
+	float:left;
+}
+
+#box{
+	float:left;
+	width: 80%;
+	height: 50%;
+	margin-left:10%;
+	margin-right:10%;
+	margin-top:10%;
+	background-color:rgba(37, 50, 50, 0.8);
+	border: solid;
+	border-color: black;
+	color: white;
+}
+
+#grafiki_obok_textu{
+	float:left;
+	width:20%;
+	height:20%;
+}
+
+#text table{
+	margin-left:35%;
+	margin-top:3%;
+}
+
+#text table td{
+	border: 2px solid black;
+}
+
+#text a{
+	margin-left:35%;
+}
+
+#text h1{
+	margin-left:45%;
+	padding-top:2%;
+}
+
+#grafiki_obok_textu2{
+	float:right;
+	width:20%;
+	height:20%;
+}
+
+#stopka{
+	float:left;
+	width: 80%;
+	background: black;
+	margin-left:10%;
+	margin-right:10%;
+	margin-top:10px;
+	padding: 0;
+	text-align:center;
+	border: solid;
+	border-color: black;
+	color:grey;
+}
+
+a{
+	color:green;
+	padding:1%;
+}
+
+{% endblock %} 
+    </style>
+</head>
+{% endblock %}
 
 {% block body %}
-    <h1>Terminarz index</h1>
+<body>
+<div id="grafikagorna">
+<h1>
+BANER
+</h1>
+</div>
 
+<ul>
+	<li><a href="/home">Home</a></li>
+	<li><a class="active" href="/terminarz">Terminarz</a><li>
+	<li><a href="/cennik">Cennik</a></li>
+	<li><a href="/cennik">Kontakt</a></li>
+</ul>
+
+	<div id="box">
+	
+	<div id="grafiki_obok_textu">
+		<h1>GRAFIKI OBOK TEKSTU</h1>
+	</div>
+	
+	<div id="text">
+	<h1>Terminarz</h1>
     <table class="table">
         <thead>
             <tr>
@@ -33,7 +193,23 @@
             </tr>
         {% endfor %}
         </tbody>
+		
     </table>
+	<a href="{{ path('terminarz_new') }}">Create new</a>
+    
+	</div> <!--zamkniecie diva text-->
+	
+	<div id="grafiki_obok_textu2">
+		<h1>GRAFIKI OBOK TEKSTU</h1>
+	</div>
+	
+	</div> <!--zamkniecie boxa-->
+	
+	
+	
+	<div id="stopka">
+		<p> Projekt Tomasz Turczewski i Rafal Sipiatowski</p>
+	</div>
 
-    <a href="{{ path('terminarz_new') }}">Create new</a>
+</body>
 {% endblock %}
