poprawa wizualna + dodanie formularza kontaktku

--- a/projectIO/templates/cennik/edit.html.twig
+++ b/projectIO/templates/cennik/edit.html.twig
@@ -157,11 +157,11 @@ BANER
 	
 	<div id="text">
 	
-		<h1>Edit Cennik</h1>
+		<h1>Edytuj Cennik</h1>
 		
 		<table class="table">
-		{{ include('cennik/_form.html.twig', {'button_label': 'Update'}) }}
-		<a href="{{ path('cennik_index') }}">back to list</a>
+		{{ include('cennik/_form.html.twig', {'button_label': 'Aktualizuj'}) }}
+		<a href="{{ path('cennik_index') }}">Wróć do cennika</a>
 		{{ include('cennik/_delete_form.html.twig') }}
 		</table>
 		
