--- a/projectIO/templates/cennik/new.html.twig
+++ b/projectIO/templates/cennik/new.html.twig
@@ -157,9 +157,9 @@ BANER
 	
 	<div id="text">
 	
-		<h1>Create new Cennik</h1>
+		<h1>Stwórz nowy cennik</h1>
 		<table id="table">{{ include('cennik/_form.html.twig') }}
-		<a href="{{ path('cennik_index') }}">back to list</a></table>
+		<a href="{{ path('cennik_index') }}">Wróć do cennika</a></table>
 		
 	</div> <!--zamkniecie diva text-->
 	
