--- a/projectIO/templates/home_page/index.html.twig
+++ b/projectIO/templates/home_page/index.html.twig
@@ -150,7 +150,7 @@ BANER
 	<li><a class="active" href="/home">Home</a></li>
 	<li><a href="/terminarz">Terminarz</a><li>
 	<li><a href="/cennik">Cennik</a></li>
-	<li><a href="/cennik">Kontakt</a></li>
+	<li><a href="/kontakt/new">Kontakt</a></li>
 </ul>
 
 	<div id="box">
