--- a/projectIO/templates/terminarz/new.html.twig
+++ b/projectIO/templates/terminarz/new.html.twig
@@ -157,9 +157,9 @@ BANER
 	
 	<div id="text">
 	
-		<h1>Create new Terminarz</h1>
+		<h1>Dodaj nowy terminarz</h1>
 		<table id="table">{{ include('terminarz/_form.html.twig') }}
-		<a href="{{ path('terminarz_index') }}">back to list</a></table>
+		<a href="{{ path('terminarz_index') }}">Powrót do terminarza</a></table>
 		
 	</div> <!--zamkniecie diva text-->
 	
