--- a/projectIO/templates/terminarz/edit.html.twig
+++ b/projectIO/templates/terminarz/edit.html.twig
@@ -160,8 +160,8 @@ BANER
 		<h1>Edit Terminarz</h1>
 		
 		<table class="table">
-		{{ include('terminarz/_form.html.twig', {'button_label': 'Update'}) }}
-		<a href="{{ path('terminarz_index') }}">back to list</a>
+		{{ include('terminarz/_form.html.twig', {'button_label': 'Aktualizuj'}) }}
+		<a href="{{ path('terminarz_index') }}">Powrót do terminarza</a>
 		{{ include('terminarz/_delete_form.html.twig') }}
 		</table>
 		
