--- a/projectIO/templates/kontakt/index.html.twig
+++ b/projectIO/templates/kontakt/index.html.twig
@@ -1,41 +1,194 @@
 {% extends 'base.html.twig' %}
+{% block head %}
+<head>
 
-{% block title %}Kontakt index{% endblock %}
+<title>{% block title %}Cennik{% endblock %}</title>
+
+    <style>
+	{% block stylesheets %}
+    #all{
+	width:100%;
+	height:100%
+}
+
+body{
+	background-image: url("./tlo.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+
+p{
+	margin-left:5%;
+}
+#edit a{
+	margin-left:100px;
+}
+#grafikagorna{
+	height:15%;
+	position: absolute; top:0%;
+	position: fixed;
+	width: 79.3%;
+	text-align:center;
+	padding:0%;
+	margin-left:9.95%;
+	margin-right:10%;
+	border:solid;
+	border-color:black;
+	background-color: rgba(37, 50, 50, 0.8);
+}
+
+#grafikagorna h1{
+	margin-left: auto;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 9%;
+    position: fixed;
+    height: 14,2%;
+	background-color:rgba(37, 50, 50, 0.8);
+    overflow: auto;
+	margin-top: 9.9%;
+	border: solid;
+	border-color:black;
+	font-size:14px;
+}
+
+ul a {
+    display: block;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+ul a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+ul a:hover:not(.active) {
+    background-color: #4CAF50;
+    color: white;
+}
+
+#grafiki_obok_textu{
+	float:left;
+}
+
+#box{
+	float:left;
+	width: 80%;
+	height: 50%;
+	margin-left:10%;
+	margin-right:10%;
+	margin-top:10%;
+	background-color:rgba(37, 50, 50, 0.8);
+	border: solid;
+	border-color: black;
+	color: white;
+}
+
+#grafiki_obok_textu{
+	float:left;
+	width:20%;
+	height:20%;
+}
+
+#text table{
+	margin-left:40%;
+	margin-top:3%;
+}
+
+#text table td{
+	border: 2px solid black;
+}
+
+#text a{
+	margin-left:40%;
+}
+
+#text td a{
+	margin-left:0%;
+}
+
+#text h1{
+	margin-left:22%;
+	padding-top:2%;
+}
+
+#grafiki_obok_textu2{
+	float:right;
+	width:20%;
+	height:20%;
+}
+
+#stopka{
+	float:left;
+	width: 80%;
+	background: black;
+	margin-left:10%;
+	margin-right:10%;
+	margin-top:10px;
+	padding: 0;
+	text-align:center;
+	border: solid;
+	border-color: black;
+	color:grey;
+}
+
+a{
+	color:green;
+	padding:1%;
+}
+
+{% endblock %} 
+    </style>
+</head>
+{% endblock %}
 
 {% block body %}
-    <h1>Kontakt index</h1>
+<body>
+<div id="grafikagorna">
+<h1>
+BANER
+</h1>
+</div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>FirstName</th>
-                <th>LastName</th>
-                <th>Email</th>
-                <th>Message</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for kontakt in kontakts %}
-            <tr>
-                <td>{{ kontakt.id }}</td>
-                <td>{{ kontakt.firstName }}</td>
-                <td>{{ kontakt.lastName }}</td>
-                <td>{{ kontakt.email }}</td>
-                <td>{{ kontakt.message }}</td>
-                <td>
-                    <a href="{{ path('kontakt_show', {'id': kontakt.id}) }}">show</a>
-                    <a href="{{ path('kontakt_edit', {'id': kontakt.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<ul>
+	<li><a href="/home">Home</a></li>
+	<li><a href="/terminarz">Terminarz</a><li>
+	<li><a href="/cennik">Cennik</a></li>
+	<li><a class="active" href="/kontakt/new">Kontakt</a></li>
+</ul>
 
-    <a href="{{ path('kontakt_new') }}">Create new</a>
+	<div id="box">
+	
+	<div id="grafiki_obok_textu">
+		<h1>GRAFIKI OBOK TEKSTU</h1>
+	</div>
+	
+	<div id="text">
+	
+	<h1>Dziękujemy za przesłanie zgłoszenia</h1>
+
+    
+	
+	</div> <!--zamkniecie diva text-->
+	
+	<div id="grafiki_obok_textu2">
+		<h1>GRAFIKI OBOK TEKSTU</h1>
+	</div>
+	
+	</div> <!--zamkniecie boxa-->
+	
+	
+	
+	<div id="stopka">
+		<p> Projekt Tomasz Turczewski i Rafal Sipiatowski</p>
+	</div>
+
+</body>
 {% endblock %}
